--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ software package for calculating admixture statistics and testing population
 admixture hypotheses. However, although powerful and comprehensive, it is not
 exactly known for being user-friendly.
 
-A typical ADMIXTOOLS workflow usually involves a combination of
+A typical ADMIXTOOLS workflow often involves a combination of
 `sed`/`awk`/shell scripting and manual editing to create different
 configuration files. These are then passed as command-line arguments to one of
 ADMIXTOOLS commands and control how to run a particular analysis. The results
@@ -56,8 +56,8 @@ install.packages("devtools")
 devtools::install_github("bodkan/admixr")
 ```
 
-**Note that in order to run `admixr` analyses, you need a working installation
-of ADMIXTOOLS!** You can find installation instructions
+**Note that in order to use the `admixr` package, you need a working
+installation of ADMIXTOOLS!** You can find installation instructions
 [here](https://github.com/DReichLab/AdmixTools/blob/master/README.INSTALL).
 
 **Furthermore, you need to make sure that R can find ADMIXTOOLS binaries on the
