--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -92,7 +92,7 @@ install.packages("tidyverse")
 
 When everything is ready, you can run:
 
-```{r}
+```{r libraries}
 library(admixr)
 library(tidyverse)
 ```
@@ -144,20 +144,20 @@ verbose).
 Here is a prefix of a small testing SNP dataset that's distributed with
 `admixr`. We will be using this dataset in the rest of this vignette.
 
-```{r}
+```{r eigenstrat_path}
 (eigenstrat <- file.path(system.file(package = "admixr", "extdata"), "snps"))
 ```
 
 We can verify that there are three files with this prefix, as they should be:
 
-```{r}
+```{r eigenstrat_trio}
 dir(path = dirname(eigenstrat), full.names = TRUE)
 ```
 
 Let's look at their contents.
 
 #### `ind` file
-```{r, echo = FALSE}
+```{r ind_file, echo = FALSE}
 cat(system(paste0("column -t ", eigenstrat, ".ind"), intern = TRUE), sep = "\n")
 ```
 
@@ -172,12 +172,12 @@ column is what is used. For example, if you have individuals such as "French1",
 will calculate allele frequency from all of them.
 
 #### `snp` file (first 3 lines)
-```{r, echo = FALSE}
+```{r snp_file, echo = FALSE}
 cat(system(paste0("head -n 3 ", eigenstrat, ".snp"), intern = TRUE), sep = "\n")
 ```
 
 #### `geno` file (first 3 lines)
-```{r, echo = FALSE}
+```{r geno_file, echo = FALSE}
 cat(system(paste0("head -n 3 ", eigenstrat, ".geno"), intern = TRUE), sep = "\n")
 ```
 
@@ -254,14 +254,14 @@ Neanderthals).
 
 Let's save the population names first to make the code below more readable:
 
-```{r}
+```{r pop_def1}
 pops <- c("French", "Sardinian", "Han", "Papuan", "Khomani_San", "Mbuti", "Dinka")
 ```
 
 Using the `admixr` package we can then calculate the $D$ statistic above simply
 by running:
 
-```{r}
+```{r d}
 result <- d(W = pops, X = "Yoruba", Y = "Vindija", Z = "Chimp", prefix = eigenstrat)
 ```
 
@@ -270,7 +270,7 @@ The result is a simple `data.frame`:
 head(result)
 ```
 
-```{r, echo = FALSE}
+```{r d_kable, echo = FALSE}
 knitr::kable(head(result))
 ```
 
@@ -292,7 +292,7 @@ this kind of data, especially as the number of samples increases. This is how
 we can use the [`ggplot2`](https://ggplot2.tidyverse.org) package to plot the
 results:
 
-```{r, fig.width = 7, fig.height = 4}
+```{r d_plot, fig.width = 7, fig.height = 4}
 ggplot(result, aes(fct_reorder(W, D), D, color = abs(Zscore) > 2)) +
   geom_point() +
   geom_hline(yintercept = 0, linetype = 2) +
@@ -325,7 +325,7 @@ in an analogous way to $D$ statistic.
 
 To repeat the previous analysis using $f_4$ statistic, we can run:
 
-```{r}
+```{r f4}
 result <- f4(W = pops, X = "Yoruba", Y = "Vindija", Z = "Chimp", prefix = eigenstrat)
 ```
 
@@ -333,7 +333,7 @@ result <- f4(W = pops, X = "Yoruba", Y = "Vindija", Z = "Chimp", prefix = eigens
 head(result)
 ```
 
-```{r, echo = FALSE}
+```{r f4_kable, echo = FALSE}
 knitr::kable(head(result))
 ```
 
@@ -366,7 +366,7 @@ Using the nomenclature of Patterson et al. 2012, we can perform calculate
 $f_4$-ratios using the following code (`X` being a vector of samples for which
 we want to estimate Neanderthal ancestry):
 
-```{r}
+```{r f4ratio}
 result <- f4ratio(X = pops, A = "Altai", B = "Vindija", C = "Yoruba", O = "Chimp", prefix = eigenstrat)
 ```
 
@@ -377,11 +377,11 @@ column:
 head(result)
 ```
 
-```{r, echo=FALSE}
+```{r f4ratio_kable, echo=FALSE}
 knitr::kable(head(result))
 ```
 
-```{r, fig.width = 7, fig.height = 4}
+```{r f4ratio_plot, fig.width = 7, fig.height = 4}
 ggplot(result, aes(fct_reorder(X, alpha), alpha, color = abs(Zscore) > 2)) +
   geom_point() +
   geom_errorbar(aes(ymin = alpha - 2 * stderr, ymax = alpha + 2 * stderr)) +
@@ -425,7 +425,7 @@ $f_3$ statistic by fixing the $C$ outgroup as Chimp, and calculating pairwise
 $f_3$ statistics between all pairs of present-day modern humans.
 
 
-```{r}
+```{r pops2}
 pops <- c("French", "Sardinian", "Han", "Papuan", "Khomani_San", "Mbuti", "Dinka", "Yoruba")
 
 result <- f3(A = pops, B = pops, C = "Chimp", prefix = eigenstrat)
@@ -435,11 +435,11 @@ result <- f3(A = pops, B = pops, C = "Chimp", prefix = eigenstrat)
 head(result)
 ```
 
-```{r, echo=FALSE}
+```{r f3_kable, echo=FALSE}
 knitr::kable(head(result))
 ```
 
-```{r, fig.width = 8, fig.height = 6}
+```{r f3_plot, fig.width = 8, fig.height = 6}
 # sort the population labels according to an increasing f3 value relative to French
 ordered <- filter(result, A == "French") %>% arrange(f3) %>% .[["B"]] %>% c("French")
 
@@ -498,7 +498,7 @@ to the question of estimating Neanderthal ancestry proportions. Let's define:
 
 Assuming all of that, we can run qpAdm with:
 
-```{r}
+```{r qpAdm}
 result <- qpAdm(
   target = c("French", "Sardinian", "Mbuti", "Dinka"),
   refs = c("Vindija", "Yoruba"),
@@ -512,7 +512,7 @@ And we get the result as a `data.frame` again:
 result
 ```
 
-```{r, echo=FALSE}
+```{r qpAdm_kable, echo=FALSE}
 knitr::kable(result)
 ```
 
@@ -541,7 +541,7 @@ described in the $D$ statistic section, but we want to treat Europeans,
 Africans and archaics as single combined groups. But the `ind` file that we
 have does not contain grouped labels - each sample stands on its own:
 
-```{r, echo = FALSE, comment = ""}
+```{r orig_ind, echo = FALSE, comment = ""}
 ind_path <- paste0(eigenstrat, ".ind")
 cat(system(paste0("column -t ", ind_path), intern = TRUE), sep = "\n")
 ```
@@ -549,7 +549,7 @@ cat(system(paste0("column -t ", ind_path), intern = TRUE), sep = "\n")
 To merge several individual samples under a combined label we can call
 `merge_labels` like this:
 
-```{r}
+```{r merge_labels}
 # paths to the original ind file and a new modified ind file with merged labels
 ind_path <- paste0(eigenstrat, ".ind")
 modif_path <- paste0(ind_path, ".merged")
@@ -566,7 +566,7 @@ merge_labels(
 ```
 
 This is what a modified `ind` file generated by `merge_labels` looks like:
-```{r, echo = FALSE, comment = ""}
+```{r modif_ind, echo = FALSE, comment = ""}
 cat(system(paste0("column -t ", modif_path), intern = TRUE), sep = "\n")
 ```
 
@@ -574,7 +574,7 @@ We can then use "European", "African" and "Archaic" labels in any of the
 `admixr` wrapper functions described above, we just have to specify a new `ind`
 file in addition to the `prefix` argument. For example:
 
-```{r}
+```{r modif_d}
 result <- d(W = "European", X = "African", Y = "Archaic", Z = "Chimp",
             prefix = eigenstrat, ind = modif_path)
 ```
@@ -586,7 +586,7 @@ Europeans show genetic affinity to archaic humans compared to Africans today:
 head(result)
 ```
 
-```{r, echo = FALSE}
+```{r modif_d_kable, echo = FALSE}
 knitr::kable(head(result))
 ```
 
@@ -609,7 +609,7 @@ Another useful data processing function is `merge_eigenstrat`. This function
 takes two EIGENSTRAT datasets (i.e. trios of ind/snp/geno files) and merges
 them, producing a union of samples and intersection of SNPs from both of them.
 
-```{r, eval = FALSE}
+```{r marge_eigenstrat, eval = FALSE}
 merge_eigenstrat(
     prefix = output_prefix,       # pefix of the combined dataset
     input1 = path_to_1st_dataset, # prefix of the first dataset
