--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -74,6 +74,16 @@ ADMIXTOOLS programs, allowing users to focus on the analysis itself.
 
 ## Installation
 
+### ADMIXTOOLS
+**Note that in order to use the `admixr` package, you need a working
+installation of ADMIXTOOLS!** You can find installation instructions
+[here](https://github.com/DReichLab/AdmixTools/blob/master/README.INSTALL).
+
+**Furthermore, you need to make sure that R can find ADMIXTOOLS binaries on the
+`$PATH`.** If this is not the case, running `library(admixr)` will show a
+warning message with instructions on how to fix this.
+
+### `admixr`
 To install `admixr` from GitHub you need to install the package `devtools`
 first. To do this, you can simply run (in R):
 
@@ -96,15 +106,6 @@ When everything is ready, you can run:
 library(admixr)
 library(tidyverse)
 ```
-
-**Note that in order to use the `admixr` package, you need a working
-installation of ADMIXTOOLS!** You can find installation instructions
-[here](https://github.com/DReichLab/AdmixTools/blob/master/README.INSTALL).
-
-**Furthermore, you need to make sure that R can find ADMIXTOOLS binaries on the
-`$PATH`.** If this is not the case, running `library(admixr)` will show a
-warning message with instructions on how to fix this.
-
 
 
 
