--- a/README.Rmd
+++ b/README.Rmd
@@ -26,14 +26,13 @@ software package for calculating admixture statistics and testing population
 admixture hypotheses. However, although powerful and comprehensive, it is not
 exactly known for being user-friendly.
 
-A typical ADMIXTOOLS workflow often involves a combination of
-`sed`/`awk`/shell scripting and manual editing to create different
-configuration files. These are then passed as command-line arguments to one of
-ADMIXTOOLS commands and control how to run a particular analysis. The results
-are then redirected to another file, which has to be parsed by the user to
-extract values of interest, often using command-line utilities again or (worse)
-by manual copy-pasting.  The processed results are then analysed in R, Excel or
-another program.
+A typical ADMIXTOOLS workflow often involves a combination of `sed`/`awk`/shell
+scripting and manual editing to create different configuration files. These are
+then passed as command-line arguments to one of ADMIXTOOLS commands and control
+how to run a particular analysis. The results are then redirected to another
+file, which has to be parsed by the user to extract values of interest, often
+using command-line utilities again or (worse) by manual copy-pasting. Finally,
+the processed results are analysed in R, Excel or another program.
 
 This workflow is very cumbersome, especially if one wants to explore many
 hypotheses involving different combinations of populations. Most importantly,
